style.css
/*CSS Variables*/
:root{
    --backColor: rgb(233, 241, 250);
    --taskColor:rgba(252, 252, 252, 0);
    --headerColor:rgb(252, 252, 252);
    --taskBackColor:rgb(252, 252, 252);
    --highlightColor:rgb(189, 231, 253);
    --addTaskColor:rgb(191, 238, 209);
    --smallBtnColor:rgb(233, 241, 250);
    --mainText:rgb(0, 0, 0);
    --subText:rgb(59, 61, 58);

    /*Dark mode colors*/
    --backColorDark: rgb(35, 51, 58);
    --taskColorDark:white;
    --headerColorDark:rgb(45, 45, 45);
    --taskBackColorDark:rgb(45, 45, 45);
    --highlightColorDark:rgb(52, 73, 84);
    --addTaskColorDark:rgb(255, 194, 130);
    --smallBtnColorDark:rgb(255, 255, 255);
    --mainTextDark:rgb(252, 252, 252);
    --subTextDark:rgb(180, 180, 180);
}

html, body{
    margin:0;
    padding:0;
    height: 100%;

    display: flex; /*This is flexbox for the entire web page, (needed to extend the body to the bottom)*/
    flex-direction: column;  /*Items in this flexbox are stcked up to down*/

    /*this removes all the scroll bars, more like an app*/
    -ms-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    font-family: "Roboto", sans-serif; /*default font for page*/
    font-weight: 400;
    font-style: normal;
    user-select: none;  /*Makes the text un-highlightable for entire page */
    /*background-color: rgb(240, 244, 248);*/
}

/*placeholder text color*/
::placeholder {
    color: var(--subText);
    opacity: 1; /* Firefox */
}
::-ms-input-placeholder { /* Edge 12 -18 */
    color:var(--subText);
}


p{
    margin:auto;
}

/****************** To DO List Portion *********************/

.two-section{ /*Website split in 2 sections (sidebar and mainArea)*/
    display:flex; /*two parts of website are split using flexbox*/
    flex-direction: row;  /*two sections are in side by side formation (sidebar and mainArea)*/
    flex-wrap: nowrap; /*never wrap these two section*/
    flex-grow:1; /*both sections extend to bottom of page*/
    justify-content: flex-start; /*flex elements get packed towards the start (first sidebar, then mainarea)*/
}

#sidebar{
    display:flex;  /*sidebar uses flexbox to organize links*/
    display:none;/*by default cant see it without sign in*/
    flex-direction: column; /*flex box is configured to stack elements (links)*/
    flex-wrap:nowrap; /*no wrap on this flex box*/
    gap: 30px; /*flexbox gap*/
    width: 105px; /*width of sidebar, required for transition to work*/
    background-color:rgb(236, 229, 218); /*background color of sidebar*/
    background-color:var(--backColor);

    padding-top: 47px; /*padding on top of sidebar*/
    transition: all 0.5s ease; /*transition for sidebar expansion*/
    /*border: red solid 1px;*/
}

#sidebar-linkName{
    display: none; /*when not expanded the link name will not show*/
    margin-left:15px; /*Space betwwen icon and text on an extended side menu*/
}

#sidebar.active{ /*When the sidebar is expanded*/
    width:300px; /*width of expanded sidebar*/
    & #sidebar-linkName{   /*nested element to chain css actions*/
        display:block;     /*display the link names when sidebar is expanded*/
    }
}

#sidebar a{  /* A sidebar button (expanded or contracted) */
    display:flex; /*button uses flexbox to organize the icon and link name*/
    flex-direction: row; /*icon and link name will be side by side*/

    margin-left:30px; /*margin to the left of a sidebar button*/
    margin-right:30px; /*margin to the right of a sidebar button*/
    padding:8px 10px; /*padding inside a sidebar button*/
    border-radius: 100px; /*make the button completely round*/
    color:var(--subText); /*default color of sidebar button (symbol or name)*/
    text-decoration: none; /*removes the underline associated with links*/
    transition: all 0.3s ease; /*transition for color change on hover*/
    /*background-color: rgba(255, 255, 255, 0); /*transluscent background color around button, used as tool for testing*/
    /*border: rgb(255, 0, 0) 1px solid;*/
}

#sidebar a.active{  /*when a sidebar button is associated with the current page*/
    background-color: rgb(213, 232, 202); /*active button has light green background*/
    background-color:rgb(235, 220, 249);
    background-color: var(--highlightColor);
    color: black; /*active button is black*/
    & .material-symbols-outlined{  
        font-variation-settings:
        'FILL' 1,  /*active button has its icon filled*/
        'wght' 400,
        'GRAD' 0,
        'opsz' 24
    }
}
#sidebar a:hover{  /*when you hover over a sidebar button*/
    background-color: rgb(185, 201, 176); /*background color of a button that been hovered over*/
    transform: scale(1.01); /*scale of sidebar button when hovered over*/
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; /*shadow of button*/
    & .material-symbols-outlined{
        font-variation-settings:
        'FILL' 1,      /*Icon is fiiled when button is hovered over*/
        'wght' 400,
        'GRAD' 0,
        'opsz' 24
    }
}

.material-symbols-outlined {   /*default google icon css*/
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 24;
}



#mainarea{    
    display:flex; /*estblish that this container uses flexbox*/
    flex-direction: column; /*items are layout in row direction*/
    flex-wrap: nowrap; /*all items will appear on one line (no wrapping)*/
    background-color:rgb(236, 229, 218 ); /*background color of main area section*/
    background-color: rgb(235, 230, 242);
    background-color: var(--backColor);
    width:100%; /*width of main area*/
    overflow: hidden; /*important, otherwise mainArea can go off screen with big task names*/
    /*border: blue 1px solid;*/
}

/*-----------------Login Portion------------------*/
#login-title{
    margin: auto;
}
/* ... */

